# image-stitching

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: MergeTest.ipynb
src/: main.py  merge_by_homography.py  merge_by_traslation.py
src/image_stitching/: main.py
test/: merge_by_homography.py  merge_by_translation.py  merge_by_translation_fast.py
tests/: merge_by_homography.py  merge_by_translation.py  merge_by_translation_fast.py
